Add channel overview endpoint
